--- a/Develop/index.html
+++ b/Develop/index.html
@@ -18,21 +18,28 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+    ></script>
+
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
+
   </head>
+ 
+
 
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <div></div>
       <p id="currentDay" class="lead"></p>
+      <p id="currentDate" class="lead"></p>
+      <p id="currentTime" class="lead"></p>
     </header>
-      <span id="timeDay"></span>
-      <span id="timeDisplay"></span>
-      
-
-    <div class="container">
+      <div class="container">
       <!-- Timeblocks go here -->
 
       <div class="timeBlocks">8am</div>
